# Scribus-plugins

./: .gitattributes  .gitignore  Brewfile  README-mac.md  README-windows.md  README.md  build-windows.cmd  scribus-mac-prod.sh
.github/workflows/: repo-check.yml
patches/windows/: 001-zip-wide-file-api.patch  002-msvc-pgf-platform.patch  003-msvc-core-compile-and-link.patch  004-windows-feature-policy.patch  005-register-codewindow.patch
plugin/codewindow/: CMakeLists.txt  codewindow.cpp  codewindow.h
scripts/: mac-build-codewindow.sh  sync-codewindow-plugin.sh
scripts/windows/: fake-pkg-config.py  scribus-win-prod.ps1
